Customize AMLSim for high-volume generation